[package]
name = "fmodsilo_interface_stdio"
version = "0.1.0"
edition = "2021"
license = "MIT or Apache 2.0"
description = "Defines an stdio interface for FModSilo language server."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fmodsilo_server = {path = "../fmodsilo_server", version = "0.1.0"}