[package]
name = "fmodsilo_server"
version = "0.1.0"
edition = "2021"
license = "MIT or Apache 2.0"
description = "FModSilo language server provides language features for Factorio mod development."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.82"
serde = {version = "1.0.100", features = ["derive"]}
uuid = {versin = "1.1.2", features = ["v4", "fast-rng"]}
lsp_json = {path = "../lsp_json", version = "0.1.0"}