[package]
name = "lsp_json"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Defines a LSP implementation in Rust, including serialization with serde_json."
repository = "https://github.com/DragonGamesStudios/fmodsilo-ls"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.82"
serde = {version = "1.0.100", features = ["derive"]}
